# A3D3a_MVP

./: LICENSE.txt  README.md  mvp_build_graph.py  pyproject.toml  sig_first_neighbors.py
adaMVP/: adj_mat_interactome.py  graph_builder.py  graphical_models.py  markov_model_dataframe.py  mvp_build_graph.py  sig_first_neighbors.py  study_bias.py
code_for_manuscript/: README.md  installed_R_packages.txt  requirement_packages_list.txt
code_for_manuscript/DNA+RNA/: GDSC_validation.py  TCGA_GTEx_DEG_all.py  TCGA_GTEx_processing.R  community_detection.py  concatenate_altered_WES_RNAseq.py  config.py  depmap_saturation_check.py  depmap_validation.py  diffusion_models.R  elastic_net_classifier_TCGA_GTEx.py  evaluation_of_models_by_tier1_genes.py  find_first_neighbors.py  main.py  model_comparisons.py  prep_model_comparisons.py  set_initial_score_to_zero.py  study_bias_check.py  tuning_PGM_parameters.py
code_for_manuscript/DNA_only/: GDSC_validation.py  community_detection.py  config.py  depmap_saturation_check.py  depmap_validation.py  diffusion_models.R  evaluation_of_models_by_tier1_genes.py  find_first_neighbors.py  main.py  model_comparisons.py  patients_altered_WES.py  prep_model_comparisons.py  set_initial_score_to_zero.py  study_bias_check.py  tuning_PGM_parameters.py
data/: publications_all_genes.txt
docs/: results_documentation.md
docs/example_output/: first_neighbors_Apr03-11-14.csv  markov_output_Wm_0.5_alpha_0.1_Apr03-11-14.csv
input/: TCGA_BRCA_DNA_altered_freq.csv
tutorial/: graph_modeling_and_community_detection.ipynb
(+14 files in other folders)
